--- a/config.ini
+++ b/config.ini
@@ -61,3 +61,18 @@ show_target_line = True
 debug_window_always_on_top = True
 debug_window_scale_percent = 100
 debug_window_name = Calculator
+
+[Model Training]
+pertrained_model_path = models/yolov8m-pose.pt
+train_data_path = logic/game.yaml
+num_epoch = 10
+save_checkpoint = False
+train_output_path = train
+optimizer = auto
+verbose = True
+cosine_lr = False
+freeze_layer = 10
+learning_rate = 0.01
+momentum = 0.937
+pose_loss_weight = 12.0
+keypoint_objectness_loss_weight = 2.0
